--- a/config/database.yml
+++ b/config/database.yml
@@ -13,13 +13,10 @@ development:
   <<: *default
   database: db/development.sqlite3
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.sqlite3
-
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  host: localhost
+  database: VALUE_OBTAINED_FROM_YOUR_HEROKU_PG_CONFIG
+  pool: 5
+  username: app-dev
